tools/sddl/assembler/tests/success/math_neg_positive.asm
# Test: math.neg - negate positive number
# Stack: ... I64 → ... I64
push.i32 42
math.neg
halt
