tools/sddl/assembler/tests/fail/push_i32_missing_param.asm
# EXPECT-ERROR: requires 1 parameter
push.i32
halt
